--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "require": {
         "php": "^7.2",
         "ext-intl": "*",
+        "endroid/qr-code": "^3.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "linecorp/line-bot-sdk": "^4.2"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
